Update and rename Build TTYD OpenWrt 21.02.1.yml to Build TTYD OpenWrt 23.05.3.yml

--- a/.github/workflows/Build TTYD OpenWrt 23.05.3.yml
+++ b/.github/workflows/Build TTYD OpenWrt 23.05.3.yml
@@ -85,33 +85,93 @@ jobs:
         uses: mxschmitt/action-tmate@v3
         if: ${{ github.event.inputs.ssh == 'true' }}
 
-      - name: 为 OpenWrt 23.05.3 设置 feeds 和配置
+      - name: 彻底清理官方 libwebsockets 包
         run: |
           cd $SDK_DIR
+          echo "=== 开始彻底清理官方 libwebsockets 包 ==="
           
-          # 彻底删除官方 libwebsockets 包
-          rm -rf package/feeds/packages/libwebsockets
-          find package -type d -name "libwebsockets" ! -path "*/libwebsockets-full/*" -exec rm -rf {} + || true
-          
+          # 首先更新 feeds 获取包列表
           ./scripts/feeds update -a
+          
+          # 使用 feeds 命令卸载官方包
+          ./scripts/feeds uninstall libwebsockets || true
+          
+          # 彻底删除所有官方 libwebsockets 相关文件
+          echo "移除 feeds/packages/libs/libwebsockets..."
+          rm -rf feeds/packages/libs/libwebsockets
+          
+          echo "移除 package/feeds/packages/libwebsockets..."
+          rm -rf package/feeds/packages/libwebsockets
+          
+          echo "搜索并移除其他位置的 libwebsockets 包..."
+          find . -type d -name "libwebsockets" ! -path "*/libwebsockets-full/*" ! -path "*/dl/*" -exec echo "移除: {}" \; -exec rm -rf {} + || true
+          
+          # 清理构建缓存
+          echo "清理构建缓存..."
+          rm -rf build_dir/target-*/libwebsockets-* || true
+          rm -rf build_dir/target-*/libwebsockets || true
+          rm -rf staging_dir/target-*/pkginfo/libwebsockets* || true
+
+      - name: 安装 feeds 并验证清理
+        run: |
+          cd $SDK_DIR
+          echo "=== 安装 feeds（不包含官方 libwebsockets）==="
           ./scripts/feeds install -a
           
+          echo "=== 验证官方 libwebsockets 包是否已彻底删除 ==="
+          if [ -d "feeds/packages/libs/libwebsockets" ]; then
+            echo "❌ 错误：feeds/packages/libs/libwebsockets 仍然存在"
+            exit 1
+          fi
+          
+          if [ -d "package/feeds/packages/libwebsockets" ]; then
+            echo "❌ 错误：package/feeds/packages/libwebsockets 仍然存在"
+            exit 1
+          fi
+          
+          echo "✅ 官方 libwebsockets 包已彻底删除"
+          echo "✅ 自定义 libwebsockets-full 包状态："
+          find package -name "*libwebsockets*" -type d
+
+      - name: 配置 OpenWrt 构建
+        run: |
+          cd $SDK_DIR
+          echo "=== 配置构建目标 ==="
           # 配置为 RK3568 目标
           echo "CONFIG_TARGET_rockchip=y" > .config
           echo "CONFIG_TARGET_rockchip_armv8=y" >> .config
           echo "CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s=y" >> .config
+          
+          # 只选择自定义的 libwebsockets-full
           echo "CONFIG_PACKAGE_libwebsockets-full=m" >> .config
           echo "CONFIG_PACKAGE_ttyd=m" >> .config
           echo "CONFIG_PACKAGE_luci-app-ttyd=m" >> .config
           
+          # 明确禁用其他 libwebsockets 变体
+          echo "# CONFIG_PACKAGE_libwebsockets is not set" >> .config
+          echo "# CONFIG_PACKAGE_libwebsockets-openssl is not set" >> .config
+          echo "# CONFIG_PACKAGE_libwebsockets-mbedtls is not set" >> .config
+          
+          echo "=== 应用默认配置 ==="
           make defconfig
+          
+          echo "=== 最终配置检查 ==="
+          echo "libwebsockets 相关配置:"
+          grep -E "CONFIG_PACKAGE_libwebsockets" .config || echo "未找到相关配置"
 
       - name: 下载软件包源码
         run: |
           cd $SDK_DIR
-          make package/libwebsockets-full/download V=s
+          # 首先下载自定义包
+          if [ -d "package/libwebsockets-full" ]; then
+            echo "下载 libwebsockets-full 源码..."
+            make package/libwebsockets-full/download V=s
+          fi
+          
           make package/ttyd/download V=s
           make package/luci-app-ttyd/download V=s
+          
+          echo "检查下载的文件:"
           find dl -size -1024c -exec ls -l {} \; || true
 
       - name: 编译 libwebsockets-full
@@ -119,10 +179,17 @@ jobs:
         run: |
           cd $SDK_DIR
           echo "🚀 开始编译 libwebsockets-full..."
+          
+          # 首先清理可能的旧构建
           make package/libwebsockets-full/clean V=s
+          
           if make package/libwebsockets-full/compile -j$(nproc) V=s; then
             echo "status=success" >> $GITHUB_OUTPUT
             echo "✅ libwebsockets-full 编译成功"
+            
+            # 验证编译产物
+            echo "=== 检查编译产物 ==="
+            find bin -name "*libwebsockets*" -type f | head -10 || echo "未找到 libwebsockets 产物"
           else
             echo "status=failed" >> $GITHUB_OUTPUT
             echo "❌ libwebsockets-full 编译失败"
@@ -135,6 +202,7 @@ jobs:
           cd $SDK_DIR
           echo "🚀 开始编译 ttyd..."
           make package/ttyd/clean V=s
+          
           if make package/ttyd/compile -j$(nproc) V=s; then
             echo "status=success" >> $GITHUB_OUTPUT
             echo "✅ ttyd 编译成功"
@@ -215,17 +283,21 @@ jobs:
           - **目标平台**: Rockchip ARMv8 (RK3568)
           - **代码库**: ${{ github.repository }}
           - **提交**: ${{ github.sha }}
+          - **libwebsockets**: 自定义完整版（完全替换官方版本）
           
           ### 包含的软件包
           - **ttyd** - 通过网络共享您的终端，支持 TLS/SSL
-          - **libwebsockets-full** - 完整的 WebSocket 库，支持 OpenSSL
+          - **libwebsockets-full** - 完整的 WebSocket 库，支持 OpenSSL（替换官方版本）
           - **luci-app-ttyd** - ttyd 的 LuCI 网页界面
           
           ### 安装说明
           1. 将 IPK 文件上传到您的 RK3568 OpenWrt 23.05.3 设备
           2. 安装软件包 (按顺序安装):
           \`\`\`bash
+          # 首先安装自定义的 libwebsockets-full
           opkg install libwebsockets-full_*.ipk
+          
+          # 然后安装 ttyd 和界面
           opkg install ttyd_*.ipk
           opkg install luci-app-ttyd_*.ipk
           \`\`\`
@@ -258,6 +330,9 @@ jobs:
           \`\`\`
           
           6. 通过浏览器访问: \`https://您的设备IP:7681\`
+          
+          ### 重要说明
+          此构建使用自定义的 libwebsockets-full 包，完全替换了官方版本，确保完整的 SSL/TLS 支持。
           
           ### 文件列表
           EOF
