Refactor Makefile for LuCI compatibility
Updated Makefile to improve compatibility with newer LuCI versions.

--- a/luci-app-ttyd/Makefile
+++ b/luci-app-ttyd/Makefile
@@ -1,9 +1,3 @@
-
-# Copyright (C) 2016 Openwrt.org
-#
-# This is free software, licensed under the Apache License, Version 2.0 .
-#
-
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=luci-app-ttyd
@@ -13,8 +7,15 @@ PKG_RELEASE:=1
 LUCI_TITLE:=LuCI Support for ttyd
 LUCI_DEPENDS:=+ttyd
 LUCI_PKGARCH:=all
+
+# 关键补丁：禁止 LuCI 2024.x 的 PKG_VERSION 模板替换，否则会 sed 崩溃
 LUCI_NO_COMMIT:=1
 
 include $(TOPDIR)/feeds/luci/luci.mk
 
-# call BuildPackage - OpenWrt buildroot signature
+# 兼容 LuCI 新版本，不使用老式 PKG_VERSION 替换机制
+define Package/$(PKG_NAME)/install
+	$(call Package/luci/install,$(1))
+endef
+
+$(eval $(call BuildPackage,$(PKG_NAME)))
