Add Chinese language support in build config

--- a/.github/workflows/Build TTYD OpenWrt 24.10.4.yml
+++ b/.github/workflows/Build TTYD OpenWrt 24.10.4.yml
@@ -189,6 +189,8 @@ jobs:
           echo "CONFIG_TARGET_rockchip=y" > .config
           echo "CONFIG_TARGET_rockchip_armv8=y" >> .config
           echo "CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r5s=y" >> .config
+          # 选择中文语言支持
+          echo "CONFIG_PACKAGE_luci-i18n-base-zh-cn=y" >> .config
           
           # 选择 libuv 和自定义的 libwebsockets-full
           echo "CONFIG_PACKAGE_libuv=y" >> .config
